<resources>
    <string name="app_name">Museos DF</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configuración</string>

    <string name="home">Home</string>
    <string name="acction_1">Museos cercanos</string>
    <string name="acction_2">Buscar Museos</string>
    <string name="acction_3">Museos En Mapa</string>
    <string name="acction_title">Otros</string>
    <string name="acction_4">Compartir</string>
    <string name="acction_5">Contacto</string>

    <string name="map_title">Ruta</string>

    <string name="person_name">Nombre de Usuario</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Nombre a Mostrar</string>
    <string name="pref_default_display_name">Cambia Nombre</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silencia</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_now">Sinconizar ahora!</string>

    <string name="title_museum_list">Museums</string>
    <string name="title_museum_detail">Museum Detail</string>

    <string name="mode">Forma de llegar</string>
    <string name="from">Origen</string>
    <string name="to">Destino</string>
    <string name="mode_auto">Carro</string>
    <string name="mode_walk">Caminando</string>
    <string name="mode_bicy">Bicicleta</string>
    <string name="chosse">Escoje ubicación</string>
    <string name="chosse_museum">Museos</string>
    <string name="chosse_near_museum">Museo Cercano</string>

</resources>
