<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_white_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_near"
            android:icon="@drawable/ic_directions_white_24dp"
            android:title="@string/acction_1" />
        <item
            android:id="@+id/nav_find"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/acction_2" />
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/acction_3" />
    </group>

    <item android:title="@string/acction_title">
        <menu>
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_settings_applications_white_24dp"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_white_24dp"
                android:title="@string/acction_4" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send_white_24dp"
                android:title="@string/acction_5" />
        </menu>
    </item>

</menu>